--- a/assets/style.css
+++ b/assets/style.css
@@ -84,6 +84,9 @@ body {
 	font-weight: 800;
 	font-style: italic;
 	width: 60%;
+	color: #000000;
+	background-color: #F6D2B8;
+	font-size: 18px;
 }
 #about-me p {
 	width: 80%;
@@ -242,6 +245,10 @@ form textarea {
 input[type="submit"] {
 	background-color: #BEB45A;
 	padding: .5em 1em
+}
+
+.service__price{
+	font-size: 20px;
 }
 
 @media all and (max-width: 1180px) {
