--- a/assets/style.css
+++ b/assets/style.css
@@ -50,6 +50,9 @@ body {
 	position: relative;
 }
 
+.carousel-control-next-icon{
+	color:#000000 !important;
+}
 .picture.left::before {
 	content: ' ';
 	background-color: #E5975F;
@@ -104,7 +107,7 @@ body {
 	justify-content: center;
 }
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-	color: #fff;
+	color: #000000;
 	background-color: #BEB45A;
 	border-radius:0 ;
 }
